# px

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  commitlint.config.cjs  package-lock.json  package.json  pyproject.toml
crates/px-cli/: Cargo.toml
crates/px-cli/src/: cli.rs  completion.rs  dispatch.rs  main.rs  output.rs  style.rs  traceback.rs
crates/px-cli/src/output/: details.rs  failure.rs  migrate.rs  mod.rs  run.rs  status.rs
crates/px-cli/tests/: cache.rs  cas_native_run.rs  common.rs  dry_run_preview.rs  ephemeral.rs  exit_codes.rs  explain.rs  fmt.rs  help.rs  inline_scripts.rs  install.rs  lock.rs  migrate.rs  offline_add.rs  output.rs  prefetch.rs  prefetch_workspace.rs  project.rs  project_lock.rs  pyc_cache.rs  python.rs  resolver.rs  run_by_reference.rs  sandbox.rs  sdist.rs  smoke.rs  state_machine.rs  status.rs  test_command.rs  tools.rs  traceback.rs  traceback_matrix.rs  url_run.rs  ux.rs  workflows.rs  workspace.rs
crates/px-core/: ARCHITECTURE.md  Cargo.toml
crates/px-core/src/: api.rs  config.rs  context.rs  distribution.rs  effects.rs  fmt_runner.rs  lib.rs  migration.rs  process.rs  project.rs  project_state.rs  pypi.rs  python_build.rs  python_cli.rs  run.rs  run_plan.rs  runtime.rs  runtime_manager.rs  store.rs  tools.rs  traceback.rs  workspace.rs
crates/px-core/src/commands/: cache.rs  env.rs  lock.rs  migrate.rs  mod.rs  output.rs  project.rs  python.rs  quality.rs  store.rs  tool.rs  workflow.rs  workspace.rs
crates/px-core/src/core/: fs.rs  mod.rs  net.rs  status.rs  system_deps.rs
crates/px-core/src/core/config/: context.rs  mod.rs  settings.rs  state_guard.rs
crates/px-core/src/core/distribution/: build.rs  mod.rs  plan.rs  publish.rs  uv.rs
crates/px-core/src/core/migration/: apply.rs  mod.rs  plan.rs  runtime.rs
crates/px-core/src/core/migration/apply/: foreign_tools.rs  locked_versions.rs  migrate.rs  mod.rs  types.rs
crates/px-core/src/core/project/: init.rs  lock.rs  mod.rs  mutate.rs  preview.rs  state.rs  status.rs  sync.rs  why.rs
crates/px-core/src/core/python/: mod.rs  python_build.rs  python_cli.rs  python_sys.rs
crates/px-core/src/core/runtime/: artifacts.rs  builder.rs  cas_env.rs  effects.rs  execution_plan.rs  explain.rs  facade.rs  fmt_plan.rs  fmt_runner.rs  mod.rs  process.rs  run.rs  run_completion.rs  run_plan.rs  run_plan_tests.rs  runtime_manager.rs  script.rs  tests.rs  traceback.rs
crates/px-core/src/core/runtime/cas_env/: fs_tree.rs  materialize.rs  mod.rs  owners.rs  profile.rs  runtime.rs  scripts.rs  tests.rs
crates/px-core/src/core/runtime/execution_plan/: mod.rs  plan.rs  sandbox.rs  sys_path.rs  types.rs
crates/px-core/src/core/runtime/explain/: entrypoint.rs  mod.rs  render.rs  run.rs
crates/px-core/src/core/runtime/facade/: cas_native.rs  context.rs  errors.rs  execute.rs  mod.rs  plan.rs  sandbox.rs  tests.rs
crates/px-core/src/core/runtime/facade/context/: env_sync.rs  mod.rs  python_context.rs  pythonpath.rs  types.rs  version_file.rs
crates/px-core/src/core/runtime/facade/env_materialize/: editable.rs  markers.rs  mod.rs  refresh.rs  runtime.rs  site.rs  state.rs  test_support.rs  wheel.rs
crates/px-core/src/core/runtime/project/: mutate.rs
crates/px-core/src/core/runtime/run/: cas_native.rs  commit.rs  driver.rs  ephemeral.rs  errors.rs  mod.rs  ref_tree.rs  reference.rs  request.rs  runners.rs  sandbox.rs  test_exec.rs  tests.rs  workdir.rs
crates/px-core/src/core/sandbox/: app_bundle.rs  errors.rs  image.rs  mod.rs  pack.rs  paths.rs  pxapp.rs  resolve.rs  runner.rs  store.rs  system_deps.rs  tests.rs  time.rs  types.rs
crates/px-core/src/core/sandbox/pack/: base_image.rs  defaults.rs  entrypoint.rs  layers.rs  mod.rs  oci.rs  project.rs  tests.rs  workspace_member.rs
crates/px-core/src/core/store/: cache.rs  cas.rs  mod.rs  prefetch.rs  sdist.rs  wheel.rs
crates/px-core/src/core/store/cas/: archive.rs  doctor.rs  gc.rs  keys.rs  mod.rs  repo_snapshot.rs  store_impl.rs  tests.rs
crates/px-core/src/core/store/sdist/: builder.rs  download.rs  ensure.rs  hash.rs  mod.rs  native_libs.rs  tests.rs  wheel.rs
crates/px-core/src/core/tooling/: diagnostics.rs  messages.rs  mod.rs  outcome.rs  progress.rs  timings.rs
crates/px-core/src/core/tools/: install.rs  list_remove.rs  metadata.rs  mod.rs  paths.rs  run.rs
crates/px-core/src/core/workspace/: discovery.rs  member_ops.rs  mod.rs  run_context.rs  snapshot.rs  state.rs  status.rs  sync.rs  tests.rs  types.rs
crates/px-core/src/distribution/: artifacts.rs  build.rs  plan.rs  publish.rs
crates/px-core/src/migration/: apply.rs  mod.rs  plan.rs
crates/px-core/src/project/: init.rs  mod.rs  status.rs  sync.rs
crates/px-core/src/store/: mod.rs  sdist.rs
crates/px-core/src/tools/: install.rs  list_remove.rs  mod.rs  run.rs
crates/px-core/tests/: boundaries.rs
crates/px-domain/: Cargo.toml
crates/px-domain/src/: api.rs  autopin.rs  init.rs  lib.rs  lockfile.rs  manifest.rs  onboard.rs  project_resolver.rs  resolver.rs  runtime.rs  snapshot.rs  state.rs
crates/px-domain/src/lockfile/: analysis.rs  io.rs  mod.rs  spec.rs  types.rs
crates/px-domain/src/project/: init.rs  manifest.rs  mod.rs  onboard.rs  snapshot.rs  state.rs
crates/px-domain/src/project/manifest/: dependency_groups.rs  fingerprint.rs  mod.rs  normalize.rs  options.rs  packages.rs
crates/px-domain/src/resolution/: autopin.rs  mod.rs  project_resolver.rs  resolver.rs
crates/px-domain/src/workspace/: mod.rs
crates/px-lockfile/: Cargo.toml
crates/px-lockfile/src/: lib.rs
crates/px-project/: Cargo.toml
crates/px-project/src/: autopin.rs  init.rs  lib.rs  manifest.rs  onboard.rs  resolver.rs  snapshot.rs
docs/: cli.md  (+20 more)
fixtures/large_graph/: pyproject.toml
fixtures/sample_px_app/: README.md  pyproject.toml
fixtures/sample_px_app/sample_px_app/: __init__.py  bad_import.py  cli.py
fixtures/sample_px_app/tests/: test_cli.py
fixtures/workspace_dual/member_alpha/: pyproject.toml
fixtures/workspace_dual/member_alpha/member_alpha/: cli.py
fixtures/workspace_dual/member_alpha/tests/: test_cli.py
(+122 files in other folders)
