[workspace]
resolver = "2"
members = [
    "crates/px-cli",
    "crates/px-core",
    "crates/px-domain",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.89"

[workspace.dependencies]
anyhow = "1"
camino = "1"
clap = { version = "4.5", features = ["derive", "env"], default-features = true }
color-eyre = "0.6"
fs-err = "2"
hex = "0.4"
indexmap = "2"
miette = { version = "7", features = ["fancy"] }
once_cell = "1"
pep440_rs = "0.5"
pep508_rs = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "gzip", "json", "rustls-tls", "socks", "system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "process", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
assert_cmd = "2"
tempfile = "3"
dirs-next = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
time = { version = "0.3", features = ["formatting", "macros"] }
rayon = "1.10"
petgraph = "0.8.3"
uv-cache = { version = "=0.0.1" }
uv-client = { version = "=0.0.1" }
uv-configuration = { version = "=0.0.1" }
uv-dispatch = { version = "=0.0.1" }
uv-distribution = { version = "=0.0.1" }
uv-distribution-types = { version = "=0.0.1" }
uv-install-wheel = { version = "=0.0.1", default-features = false }
uv-pep440 = { version = "=0.0.1" }
uv-pep508 = { version = "=0.0.1" }
uv-platform-tags = { version = "=0.0.1" }
uv-preview = { version = "=0.0.1" }
uv-pypi-types = { version = "=0.0.1" }
uv-python = { version = "=0.0.1" }
uv-resolver = { version = "=0.0.1" }
uv-types = { version = "=0.0.1" }
uv-workspace = { version = "=0.0.1" }

[workspace.metadata]
px.description = "Opinionated Python toolchain scaffolding"

[workspace.lints.clippy]
pedantic = "warn"
