[workspace]
resolver = "2"
members = [
    "crates/px-cli",
    "crates/px-core",
    "crates/px-domain",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.89"

[workspace.dependencies]
anyhow = "1"
camino = "1"
clap = { version = "4.5", features = ["derive", "env", "unstable-ext"], default-features = true }
color-eyre = "0.6"
fs-err = "2"
hex = "0.4"
indexmap = "2"
miette = { version = "7", features = ["fancy"] }
once_cell = "1"
pep440_rs = "0.5"
pep508_rs = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "gzip", "json", "rustls-tls", "socks", "system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "process", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
assert_cmd = "2"
tempfile = "3"
dirs-next = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
time = { version = "0.3", features = ["formatting", "macros"] }
rayon = "1.10"
petgraph = "0.8.3"
uv-cache = { version = "=0.0.1" }
uv-client = { version = "=0.0.1" }
uv-configuration = { version = "=0.0.1" }
uv-auth = { version = "=0.0.1" }
uv-dispatch = { version = "=0.0.1" }
uv-distribution = { version = "=0.0.1" }
uv-distribution-filename = { version = "=0.0.1" }
uv-distribution-types = { version = "=0.0.1" }
uv-install-wheel = { version = "=0.0.1", default-features = false }
uv-pep440 = { version = "=0.0.1" }
uv-pep508 = { version = "=0.0.1" }
uv-platform-tags = { version = "=0.0.1" }
uv-preview = { version = "=0.0.1" }
uv-pypi-types = { version = "=0.0.1" }
uv-python = { version = "=0.0.1" }
uv-publish = { version = "=0.0.1" }
uv-redacted = { version = "=0.0.1" }
uv-resolver = { version = "=0.0.1" }
uv-types = { version = "=0.0.1" }
uv-workspace = { version = "=0.0.1" }
uv-build-backend = { version = "=0.0.1" }
uv-build-frontend = { version = "=0.0.1" }
uv-version = { version = "0.9.11" }

[workspace.metadata]
px.description = "Opinionated Python toolchain scaffolding"

[workspace.lints.clippy]
pedantic = "warn"

[patch.crates-io]
uv-auth = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-build-backend = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-build-frontend = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-cache = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-cache-info = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-cache-key = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-client = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-configuration = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-console = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-dirs = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-dispatch = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-distribution = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-distribution-filename = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-distribution-types = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-extract = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-flags = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-fs = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-git = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-git-types = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-globfilter = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-install-wheel = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-installer = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-keyring = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-macros = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-metadata = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-normalize = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-once-map = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-options-metadata = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-pep440 = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-pep508 = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-platform = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-platform-tags = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-preview = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-publish = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-pypi-types = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-python = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-redacted = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-requirements-txt = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-resolver = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-shell = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-small-str = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-state = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-static = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-torch = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-trampoline-builder = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-types = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-version = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-virtualenv = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-warnings = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
uv-workspace = { git = "https://github.com/astral-sh/uv.git", tag = "0.9.11" }
