[package]
name = "px-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
px-python = { path = "../px-python" }
px-runtime = { path = "../px-runtime" }
px-resolver = { path = "../px-resolver" }
px-project = { path = "../px-project" }
px-lockfile = { path = "../px-lockfile" }
dirs-next.workspace = true
toml_edit = "0.22"
pep440_rs.workspace = true
px-store = { path = "../px-store" }
reqwest.workspace = true
sha2.workspace = true
pep508_rs = "0.5"
flate2 = "1.0"
tar = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile.workspace = true
[features]
default = []
