[package]
name = "px-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
px-domain = { path = "../px-domain" }
hex.workspace = true
dirs-next.workspace = true
toml_edit = "0.22"
pep440_rs.workspace = true
reqwest.workspace = true
sha2.workspace = true
pep508_rs = "0.5"
flate2 = "1.0"
tar = "0.4"
zip.workspace = true
time.workspace = true
which = "6"
tempfile.workspace = true
base64 = "0.22"

[features]
default = []

[dev-dependencies]
httptest = "0.15"
