[package]
name = "px-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
px-domain = { path = "../px-domain" }
hex.workspace = true
dirs-next.workspace = true
toml_edit = { version = "0.22", features = ["serde"] }
pep440_rs.workspace = true
reqwest.workspace = true
sha2.workspace = true
pep508_rs = "0.5"
# flate2 1.1.6 introduced ambiguous re-exports; pin to the last good release for stable builds.
flate2 = "=1.1.5"
tar = "0.4"
zip.workspace = true
time.workspace = true
oci-distribution = "0.10"
which = "6"
bzip2 = "0.4"
tempfile.workspace = true
base64 = "0.22"
uv-build-backend.workspace = true
walkdir = "2"
ignore = "0.4"
url.workspace = true
fs4 = "0.6"
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.8"
filetime = "0.2"
tokio.workspace = true
uv-auth.workspace = true
uv-cache.workspace = true
uv-client.workspace = true
uv-configuration.workspace = true
uv-distribution-filename.workspace = true
uv-distribution-types.workspace = true
uv-publish.workspace = true
uv-redacted.workspace = true
reqwest-retry = "0.6"

[features]
default = []

[dev-dependencies]
httptest = "0.15"
serial_test = "2"
