[package]
name = "px-domain"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
camino.workspace = true
dirs-next.workspace = true
indexmap.workspace = true
pep440_rs.workspace = true
pep508_rs.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time = { version = "0.3", features = ["formatting"] }
toml_edit = "0.22"
rayon.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
