[package]
name = "px-domain"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
camino.workspace = true
dirs-next.workspace = true
indexmap.workspace = true
pep440_rs.workspace = true
pep508_rs.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time = { version = "0.3", features = ["formatting"] }
toml_edit = "0.22"
rayon.workspace = true
url.workspace = true
petgraph.workspace = true
tokio.workspace = true
uv-cache.workspace = true
uv-client.workspace = true
uv-configuration.workspace = true
uv-dispatch.workspace = true
uv-distribution.workspace = true
uv-distribution-types.workspace = true
uv-install-wheel.workspace = true
uv-pep440.workspace = true
uv-pep508.workspace = true
uv-platform-tags.workspace = true
uv-preview.workspace = true
uv-pypi-types.workspace = true
uv-python.workspace = true
uv-resolver.workspace = true
uv-types.workspace = true
uv-workspace.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
