[package]
name = "px-lockfile"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
px-project = { path = "../px-project" }
pep508_rs = "0.5"
pep440_rs.workspace = true
toml_edit = "0.22"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
tempfile.workspace = true
serde.workspace = true
sha2.workspace = true
