[package]
name = "px-project"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
toml_edit = "0.22"
pep508_rs = "0.5"
pep440_rs.workspace = true
px-python = { path = "../px-python" }
px-resolver = { path = "../px-resolver" }
dirs-next.workspace = true
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
tempfile.workspace = true
