[project]
name = "sample-px-app"
version = "0.1.0"
description = "Minimal fixture for exercising px flows"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Code Fixture", email = "fixtures@example.com" },
]
license = { text = "MIT" }
dependencies = []

[project.scripts]
sample-px-app = "sample_px_app.cli:main"

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"
